Fixing gap between sticky nav and Don't Miss bars per issue 1

--- a/css/style.css
+++ b/css/style.css
@@ -2858,7 +2858,7 @@ li.home-link:hover i {
   font-weight: bold;
 }
 .sticky-nav-wrapper {
-  height: 53px;
+  height: 25px;
 }
 .sticky-nav-holder {
   position: fixed;
